// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`componentBox test component arguments build componentBox component which can't be disposed should has no 'x' 1`] = `
<article
  className="componentBox-component"
>
  <div
    className="header"
  >
    <div
      className="header-triangle"
      onClick={[Function]}
    >
      <span
        className="triangle-bottom"
      />
    </div>
    <div
      className="header-title"
    >
      newBox
    </div>
  </div>
  <div>
    simulate div component
  </div>
</article>
`;

exports[`componentBox test component arguments build disposable componentBox component should has 'x' 1`] = `
<article
  className="componentBox-component"
>
  <div
    className="header"
  >
    <div
      className="header-triangle"
      onClick={[Function]}
    >
      <span
        className="triangle-bottom"
      />
    </div>
    <div
      className="header-title"
    >
      newBox
    </div>
    <span
      className="header-close"
      onClick={[Function]}
    >
      x
    </span>
  </div>
  <div>
    simulate div component
  </div>
</article>
`;

exports[`componentBox test show component workflow click triangle twice to show content component 1`] = `
<article
  className="componentBox-component"
>
  <div
    className="header"
  >
    <div
      className="header-triangle"
      onClick={[Function]}
    >
      <span
        className="triangle-bottom"
      />
    </div>
    <div
      className="header-title"
    >
      newBox
    </div>
    <span
      className="header-close"
      onClick={[Function]}
    >
      x
    </span>
  </div>
  <div>
    simulate div component
  </div>
</article>
`;

exports[`componentBox test show component workflow test click triangle once to hide the common type component test click close first box transform component, the component should be close 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-sceneTree"
  >
    <div>
      <article
        className="wonder-string-input"
      >
        <span
          className="component-label"
        >
          Name : 
        </span>
        <input
          className="input-component float-input"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
          value="cube"
        />
      </article>
    </div>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-right"
          />
        </div>
        <div
          className="header-title"
        >
          Transform
        </div>
      </div>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Geometry
        </div>
      </div>
      <div>
        simulate Geometry
      </div>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          RenderGroup
        </div>
        <span
          className="header-close"
          onClick={[Function]}
        >
          x
        </span>
      </div>
      <article
        className="wonder-render-group"
      >
        <div
          className=""
        >
          <div
            className=""
          >
            MeshRender : 
          </div>
          <article
            className="wonder-mesh-renderer"
          >
            <div
              className=""
            >
              <article
                className="wonder-select"
              >
                <span
                  className=""
                >
                  draw mode
                </span>
                <select
                  onChange={[Function]}
                  value="4"
                >
                  <option
                    value="0"
                  >
                    points
                  </option>
                  <option
                    value="1"
                  >
                    lines
                  </option>
                  <option
                    value="2"
                  >
                    line_loop
                  </option>
                  <option
                    value="3"
                  >
                    Line_strip
                  </option>
                  <option
                    value="4"
                  >
                    Triangles
                  </option>
                  <option
                    value="5"
                  >
                    triangle_strip
                  </option>
                  <option
                    value="6"
                  >
                    Triangle_fan
                  </option>
                </select>
              </article>
            </div>
          </article>
        </div>
        <hr />
        <div
          className=""
        >
          <div
            className=""
          >
            Material : 
          </div>
          <article
            className="wonder-material"
          >
            <div
              className=""
            >
              <article
                className="wonder-select"
              >
                <span
                  className=""
                >
                  shader
                </span>
                <select
                  onChange={[Function]}
                  value="1"
                >
                  <option
                    value="0"
                  >
                    basic_material
                  </option>
                  <option
                    value="1"
                  >
                    light_material
                  </option>
                </select>
              </article>
            </div>
            <div
              className=""
            >
              <article
                className="wonder-light-material"
              >
                <article
                  className="wonder-color-pick"
                >
                  <div
                    className=""
                  >
                    <span
                      className=""
                    >
                      diffcuse color : 
                    </span>
                    <span
                      className=""
                    >
                      #ffffff
                    </span>
                    <button
                      className=""
                      onClick={[Function]}
                    >
                      pick color
                    </button>
                  </div>
                </article>
                <article
                  className="wonder-material-texture"
                >
                  <div
                    className="texture_ground"
                    onDragEnter={[Function]}
                    onDragLeave={[Function]}
                    onDragOver={[Function]}
                    onDrop={[Function]}
                    style={
                      Object {
                        "opacity": "1",
                      }
                    }
                  />
                  <span
                    className=""
                  >
                    diffuse map : 
                  </span>
                  <img
                    src="./public/img/null.jpg"
                  />
                  <button
                    className="texture_remove"
                    onClick={[Function]}
                  >
                    remove
                  </button>
                </article>
                <article
                  className="wonder-floatInput-base"
                >
                  <article
                    className="wonder-float-input"
                  >
                    <span
                      className="component-label"
                    >
                      Shininess : 
                    </span>
                    <input
                      className="input-component float-input"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                      value="32"
                    />
                  </article>
                </article>
              </article>
            </div>
          </article>
        </div>
      </article>
    </article>
    <article
      className="wonder-addable-component"
    >
      <div
        className="addable-component-content"
      >
        <button
          className="addable-btn"
          onClick={[Function]}
        >
          Add Component
        </button>
      </div>
    </article>
  </article>
</article>
`;

exports[`componentBox test show component workflow test click triangle once to hide the common type component test the other gameObject transform component should be close 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-sceneTree"
  >
    <div>
      <article
        className="wonder-string-input"
      >
        <span
          className="component-label"
        >
          Name : 
        </span>
        <input
          className="input-component float-input"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
          value="camera"
        />
      </article>
    </div>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-right"
          />
        </div>
        <div
          className="header-title"
        >
          Transform
        </div>
      </div>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Camera Group
        </div>
        <span
          className="header-close"
          onClick={[Function]}
        >
          x
        </span>
      </div>
      <article
        className="wonder-camera-group"
      >
        <div
          className=""
        >
          <div
            className=""
          >
            CameView : 
          </div>
        </div>
        <article
          className="wonder-camera-view"
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              type : 
            </span>
            <select
              onChange={[Function]}
              value="0"
            >
              <option
                value="0"
              >
                basic_cameraView
              </option>
            </select>
          </article>
          <div
            className=""
          >
            <div
              className=""
            >
              currentCamera : 
            </div>
            <input
              defaultChecked={true}
              disabled={true}
              onClick={[Function]}
              style={
                Object {
                  "height": "35px",
                  "width": "35px",
                }
              }
              type="checkbox"
            />
          </div>
        </article>
        <hr />
        <div
          className=""
        >
          <div
            className=""
          >
            Projection : 
          </div>
          <article
            className="wonder-camera-view"
          >
            <article
              className="wonder-select"
            >
              <span
                className=""
              >
                type : 
              </span>
              <select
                onChange={[Function]}
                value="0"
              >
                <option
                  value="0"
                >
                  perspective
                </option>
              </select>
            </article>
            <article
              className="wonder-floatInput-base"
            >
              <article
                className="wonder-float-input"
              >
                <span
                  className="component-label"
                >
                  Near : 
                </span>
                <input
                  className="input-component float-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="text"
                  value="0.1"
                />
              </article>
            </article>
            <article
              className="wonder-floatInput-base"
            >
              <article
                className="wonder-float-input"
              >
                <span
                  className="component-label"
                >
                  Far : 
                </span>
                <input
                  className="input-component float-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="text"
                  value="1000"
                />
              </article>
            </article>
            <article
              className="wonder-floatInput-base"
            >
              <article
                className="wonder-float-input"
              >
                <span
                  className="component-label"
                >
                  Aspect : 
                </span>
                <input
                  className="input-component float-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="text"
                  value="1"
                />
              </article>
            </article>
            <article
              className="wonder-floatInput-base"
            >
              <article
                className="wonder-float-input"
              >
                <span
                  className="component-label"
                >
                  Fovy : 
                </span>
                <input
                  className="input-component float-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="text"
                  value="60"
                />
              </article>
            </article>
          </article>
        </div>
      </article>
    </article>
    <article
      className="wonder-addable-component"
    >
      <div
        className="addable-component-content"
      >
        <button
          className="addable-btn"
          onClick={[Function]}
        >
          Add Component
        </button>
      </div>
    </article>
  </article>
</article>
`;
